app/assets/stylesheets/style.css
#navbar {
  opacity: 0.9;
  position: fixed;
  z-index: 200;
}

#navbar li a {
  border-right: 1px solid #dddddd;
  border-left: 1px solid white;
  font-size: 12px;
  letter-spacing: 1px;
  text-transform: uppercase;
  font-weight:bold;
}

#navbar li.first a {
  border-left: 0;
}

#navbar li.last a {
  border-right: 0px;
}

#navbar li a:hover {
  background: #EEE;
}

#navbar .navbar-inner {
  padding: 0 35px 0 40px;
}

